[package]
name = "druid-test-quest"
version = "0.1.0"
authors = ["Justin Pfifer <justin.pfifer@carvana.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
rand = "0.8.4"